--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ bin-release/
 [Oo]bj/
 [Bb]in/
 
+# output
+/.temp
+/.tmp
+/build
+/dist
+
 # Other files and folders
 .settings/
 
@@ -16,3 +22,21 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+# Windows Ignores  
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Thumbnails
+._*
+
+# JetBrains IDEs
+/.idea
+
